Proof of concept of custom accessibility actions for the message list items
Signed-off-by: Peter Vágner <pvdeejay@gmail.com>

--- a/app/src/main/res/layout/include_message_compact.xml
+++ b/app/src/main/res/layout/include_message_compact.xml
@@ -31,10 +31,18 @@
         android:layout_marginStart="6dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:visibility="visible"
+        android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="@+id/paddingBottom"
         app:layout_constraintStart_toEndOf="@id/vwColor"
         app:layout_constraintTop_toTopOf="@id/paddingTop"
         app:srcCompat="@drawable/expander" />
+
+    <View
+        android:id="@+id/vwExpander"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toEndOf="@+id/ibExpander"
+        app:layout_constraintTop_toBottomOf="@id/paddingTop" />
 
     <View
         android:id="@+id/paddingStart"
@@ -50,7 +58,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="6dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:contentDescription="@string/title_legend_avatar"
+        android:importantForAccessibility="no"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/tvFolder"
         app:layout_constraintDimensionRatio="1:1"
@@ -257,10 +265,19 @@
         android:paddingTop="6dp"
         android:paddingBottom="6dp"
         android:visibility="visible"
+        android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="@+id/tvFolder"
-        app:layout_constraintEnd_toStartOf="@id/paddingEnd"
+        app:layout_constraintEnd_toStartOf="@id/vwFlagged"
         app:layout_constraintTop_toBottomOf="@id/paddingTop"
         app:srcCompat="@drawable/baseline_star_24" />
+
+    <View
+        android:id="@+id/vwFlagged"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="@string/title_accessibility_flagged"
+        app:layout_constraintEnd_toStartOf="@id/paddingEnd"
+        app:layout_constraintTop_toBottomOf="@id/paddingTop" />
 
     <TextView
         android:id="@+id/tvFolder"
